Update .gitignore, launch configuration, and main application logic for multi-label partitioning

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "lldb",
             "request": "launch",
             "program": "${workspaceFolder}/build/multi-label-partition",
-            "args": [],
+            "args": ["-m", "cube_stamped.off"],
             "cwd": "${workspaceFolder}/build",
             "env": {},
             "stopOnEntry": false,
