Refactor project_polylines_on_mesh and project_outline_parts to improve parameter handling; enhance main.cpp with updated outline point processing and streamline mesh projection functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,17 +19,13 @@ CPMAddPackage(
     NAME mesh
     SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../mesh
 )
-CPMAddPackage(
-    NAME libigl
-    GIT_TAG main
-    GITHUB_REPOSITORY liukaizheng/libigl
-)
 
 # CPMAddPackage(
 #     NAME predicates
 #     SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../predicates
 # )
 CPMAddPackage("gh:liukaizheng/predicates#main")
+CPMAddPackage("gh:liukaizheng/triangulation#main")
 
 CPMAddPackage("gh:qnzhou/MshIO#main")
 
@@ -44,7 +40,7 @@ target_link_libraries(multi-label-partition PRIVATE
     CLI11::CLI11
     Eigen3::Eigen
     gpf::mesh
-    igl::core
+    gpf::triangulation
     predicates
     mshio::mshio
 )
